# cloudnative

fastAPI/: compose.yaml
fastAPI/helloworld/: Dockerfile  pyproject.toml
fastAPI/helloworld/helloworld/: main.py
fastAPI_Helloworld/: pyproject.toml
fastAPI_Helloworld/fastapi_helloworld/: main.py
fastAPI_Helloworld/tests/: test_main.py
poetryinstallation/: pyproject.toml
poetryinstallation/tests/: test_myproject.py
