[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["AijazAhmedBZ <aijaz.ahmed.bz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = {extras = ["standard"], version = "^0.30.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
